@@ -1,3 +1,5 @@
+- Bug Fix: FENIX-15402 - CgdIntegrationService: NumberFormatException when student number not a number. Ticket ISCTE-FENIXEDU-637
+
 2.12.2 (28-08-2024)
 - Refactor:  Support to  multiple active calendars [#UL-FC-5116]
 
